--- a/Park/Base.lproj/Main.storyboard
+++ b/Park/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11761" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fhL-95-T9y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11761" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s73-ij-5e9">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -344,14 +344,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7x6-Hi-mzv">
-                                <rect key="frame" x="-14" y="254" width="389" height="413"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="notesCell" id="fEu-4C-fMh" customClass="CustomCell" customModule="Park" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="389" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fEu-4C-fMh" id="8u1-1t-JCS">
-                                            <rect key="frame" x="0.0" y="0.0" width="389" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <userDefinedRuntimeAttributes>
@@ -362,42 +362,8 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter note here..." textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="e5I-vI-tk8" customClass="CustomTextView" customModule="Park" customModuleProvider="target">
-                                <rect key="frame" x="66" y="88" width="241" height="78"/>
-                                <color key="backgroundColor" red="0.88294753840732088" green="0.88294753840732088" blue="0.88294753840732088" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="78" id="GjI-Po-ANi"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="inset">
-                                        <real key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eln-Ph-AzI" customClass="CustomButton" customModule="Park" customModuleProvider="target">
-                                <rect key="frame" x="130" y="195" width="114" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="114" id="CMq-75-uRh"/>
-                                    <constraint firstAttribute="height" constant="30" id="zqU-Kt-Yib"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
-                                <state key="normal" title="Save"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="saveBtnPressed:" destination="fhL-95-T9y" eventType="touchUpInside" id="J1D-hv-hRx"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="14G-K6-bm3">
-                                <rect key="frame" x="16" y="21" width="30" height="30"/>
+                                <rect key="frame" x="0.0" y="20" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lEz-3Z-Kzm"/>
                                     <constraint firstAttribute="width" constant="30" id="lVm-c1-vtt"/>
@@ -407,24 +373,39 @@
                                     <action selector="backBtnPressed:" destination="fhL-95-T9y" eventType="touchUpInside" id="9eP-nH-ZAA"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FEG-la-Zn7" customClass="CustomTextField" customModule="Park" customModuleProvider="target">
+                                <rect key="frame" x="42" y="21" width="274" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBQ-fd-kBa">
+                                <rect key="frame" x="336" y="21" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="9eV-51-RpR"/>
+                                    <constraint firstAttribute="width" constant="30" id="bCZ-RF-nYS"/>
+                                </constraints>
+                                <state key="normal" image="plus-symbol"/>
+                                <connections>
+                                    <action selector="addBtnPressed:" destination="fhL-95-T9y" eventType="touchUpInside" id="JKS-Tm-uPt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="7x6-Hi-mzv" secondAttribute="trailing" id="0wR-eF-sY6"/>
-                            <constraint firstItem="e5I-vI-tk8" firstAttribute="centerX" secondItem="eln-Ph-AzI" secondAttribute="centerX" id="12T-Dp-Oi8"/>
-                            <constraint firstItem="e5I-vI-tk8" firstAttribute="top" secondItem="9ZR-j7-LrZ" secondAttribute="bottom" constant="68" id="I1Z-Fa-6oO"/>
                             <constraint firstItem="7x6-Hi-mzv" firstAttribute="bottom" secondItem="sTX-eq-fFu" secondAttribute="top" id="JZ3-zy-ggL"/>
-                            <constraint firstItem="14G-K6-bm3" firstAttribute="leading" secondItem="Fkw-IL-zmz" secondAttribute="leadingMargin" id="KlH-Yc-75c"/>
-                            <constraint firstItem="eln-Ph-AzI" firstAttribute="centerX" secondItem="Fkw-IL-zmz" secondAttribute="centerX" id="Mip-wj-7ns"/>
-                            <constraint firstItem="e5I-vI-tk8" firstAttribute="leading" secondItem="Fkw-IL-zmz" secondAttribute="leadingMargin" constant="50" id="Pdz-pm-yi3"/>
-                            <constraint firstItem="eln-Ph-AzI" firstAttribute="top" secondItem="e5I-vI-tk8" secondAttribute="bottom" constant="29" id="Q5x-j0-fB8"/>
-                            <constraint firstItem="7x6-Hi-mzv" firstAttribute="top" secondItem="eln-Ph-AzI" secondAttribute="bottom" constant="29" id="VVd-aq-6xP"/>
-                            <constraint firstItem="7x6-Hi-mzv" firstAttribute="leading" secondItem="Fkw-IL-zmz" secondAttribute="leadingMargin" constant="-30" id="W6n-dX-Tas"/>
-                            <constraint firstItem="14G-K6-bm3" firstAttribute="top" secondItem="Fkw-IL-zmz" secondAttribute="topMargin" constant="21" id="vQO-8E-U5b"/>
+                            <constraint firstItem="14G-K6-bm3" firstAttribute="leading" secondItem="Fkw-IL-zmz" secondAttribute="leadingMargin" constant="-16" id="KlH-Yc-75c"/>
+                            <constraint firstItem="7x6-Hi-mzv" firstAttribute="top" secondItem="kBQ-fd-kBa" secondAttribute="bottom" constant="19" id="Lbu-BT-Hsr"/>
+                            <constraint firstAttribute="trailing" secondItem="kBQ-fd-kBa" secondAttribute="trailing" constant="9" id="NzN-Qh-ey7"/>
+                            <constraint firstItem="kBQ-fd-kBa" firstAttribute="top" secondItem="Fkw-IL-zmz" secondAttribute="top" constant="21" id="PBC-uH-9pr"/>
+                            <constraint firstItem="7x6-Hi-mzv" firstAttribute="leading" secondItem="Fkw-IL-zmz" secondAttribute="leadingMargin" constant="-16" id="W6n-dX-Tas"/>
+                            <constraint firstItem="14G-K6-bm3" firstAttribute="top" secondItem="Fkw-IL-zmz" secondAttribute="topMargin" constant="20" id="vQO-8E-U5b"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="newNote" destination="e5I-vI-tk8" id="Mlh-DL-ybS"/>
+                        <outlet property="newNoteField" destination="FEG-la-Zn7" id="vpv-WS-dIh"/>
                         <outlet property="tableView" destination="7x6-Hi-mzv" id="aW7-HB-ypR"/>
                     </connections>
                 </viewController>
@@ -479,6 +460,9 @@
                                     <constraint firstAttribute="width" constant="30" id="QkG-8f-cye"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="back"/>
+                                <connections>
+                                    <action selector="backBtnPressed:" destination="jB5-bc-nZP" eventType="touchUpInside" id="ZRP-BJ-3o4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -500,5 +484,6 @@
         <image name="back" width="256" height="256"/>
         <image name="car-outline" width="512" height="512"/>
         <image name="carsbangkok" width="540" height="960"/>
+        <image name="plus-symbol" width="256" height="256"/>
     </resources>
 </document>
