--- a/Park/Base.lproj/Main.storyboard
+++ b/Park/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fRa-sL-RU0" customClass="CustomTextField" customModule="Park" customModuleProvider="target">
-                                        <rect key="frame" x="37.5" y="184" width="300" height="30"/>
+                                        <rect key="frame" x="37" y="260" width="300" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="P9y-9y-s4L"/>
                                             <constraint firstAttribute="height" constant="30" id="oYI-6t-Adm"/>
@@ -59,7 +59,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g7a-0z-YQk" customClass="CustomTextField" customModule="Park" customModuleProvider="target">
-                                        <rect key="frame" x="37.5" y="224" width="300" height="30"/>
+                                        <rect key="frame" x="37" y="300" width="300" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="B20-i4-01D"/>
                                             <constraint firstAttribute="width" constant="300" id="wEF-yd-1iL"/>
@@ -83,7 +83,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PrT-Hs-Fw6" customClass="CustomButton" customModule="Park" customModuleProvider="target">
-                                        <rect key="frame" x="37.5" y="264" width="300" height="30"/>
+                                        <rect key="frame" x="37" y="340" width="300" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="daE-JM-8oP"/>
                                             <constraint firstAttribute="width" constant="300" id="wzZ-qJ-uln"/>
@@ -110,6 +110,15 @@
                                             <action selector="loginPressed:" destination="mxy-bD-R5Y" eventType="touchUpInside" id="Pm2-oM-zKU"/>
                                         </connections>
                                     </button>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gLl-Vc-mPv">
+                                        <rect key="frame" x="37" y="200" width="300" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.88294753839999995" green="0.88294753839999995" blue="0.88294753839999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <segments>
+                                            <segment title="Sign Up"/>
+                                            <segment title="Log In"/>
+                                        </segments>
+                                    </segmentedControl>
                                 </subviews>
                                 <color key="backgroundColor" red="0.89803921568627454" green="0.45098039215686275" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -122,7 +131,7 @@
                                     <constraint firstItem="sw7-He-LGX" firstAttribute="centerX" secondItem="khS-Qq-5uQ" secondAttribute="centerX" id="dTT-8S-BCH"/>
                                     <constraint firstItem="sw7-He-LGX" firstAttribute="leading" secondItem="khS-Qq-5uQ" secondAttribute="leading" id="p3y-jB-jCk"/>
                                     <constraint firstAttribute="trailing" secondItem="sw7-He-LGX" secondAttribute="trailing" id="qpo-MF-MqB"/>
-                                    <constraint firstItem="fRa-sL-RU0" firstAttribute="top" secondItem="sw7-He-LGX" secondAttribute="bottom" constant="10" id="t3p-m8-v6F"/>
+                                    <constraint firstItem="fRa-sL-RU0" firstAttribute="top" secondItem="sw7-He-LGX" secondAttribute="bottom" constant="86" id="t3p-m8-v6F"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -141,11 +150,12 @@
                     <connections>
                         <outlet property="emailField" destination="fRa-sL-RU0" id="5Y1-rf-9Ts"/>
                         <outlet property="passwordField" destination="g7a-0z-YQk" id="clf-ba-s1e"/>
+                        <outlet property="segment" destination="gLl-Vc-mPv" id="pkE-bR-bVu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RPU-ef-cpv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3321" y="-1325"/>
+            <point key="canvasLocation" x="3320.8000000000002" y="-1325.4872563718143"/>
         </scene>
         <!--MainVC-->
         <scene sceneID="jbT-7C-Ugq">
